js/src/tests/test262/built-ins/NativeErrors/TypeError/prototype/name.js
verifyProperty
(
TypeError
.
prototype
"
name
"
{
value
:
"
TypeError
"
writable
:
true
enumerable
:
false
configurable
:
true
}
)
;
reportCompare
(
0
0
)
;
